🐏🎒 Checkpoint ./.glitch-assets:1551957/1113 ./index.html:1551957/7555 ./script.js:1551957/8927 ./styles.css:1551957/2565

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,14 @@ h1 {
     align-items: center;
 }
 
+.correct {
+    background-color: mediumseagreen;
+}
+
+.incorrect {
+    background-color: #C41E3A;
+}
+
 .droppable {
     border: 2px dashed #3498db;
     background-color: #f2f2f2;
